mac getIpByName liefert name von IPnum


##################################################################
opsi-winst/opsi-script (4.12.4.15) stable; urgency=low

 *  new function asConfidentialList(<list>) : stringlist
 * new GUI Interface implementation
 * some additional try excet in osjson and load testfile variants

-- d.oertel <d.oertel@uib.de> Fri, 12 Feb 2021 15:00

opsi-winst/opsi-script (4.12.4.14) stable; urgency=low

 * redesign of TXStringlist file in and out encoding  (by j.laajili)
 * call of patches section with /encoding parameter (by j.laajili)
 * call of patchTextFile section with /encoding parameter  (by j.laajili)
 * new boolean function: fileorfolderExists(<file name>, [<access arch>]) (by j.laajili)
 * osregistry: open Registry with KEY:READ instead of KEY_ALL_ACCESS. Thanks to Jens Boettge. ; fixes  #4625

-- d.oertel <d.oertel@uib.de> Fri, 29 Jan 2021 15:00


opsi-winst/opsi-script (4.12.4.13) stable; urgency=low

 * osfunc: new: TUibIniFile.ReadRawSection (by j.laajili)
 * new function getSectionFromIniFile based on ReadRawSection (by j.laajili)
 * osxmlsections: fix for xml2 delnode

-- d.oertel <d.oertel@uib.de> Mon, 25 Jan 2021 15:00

opsi-winst/opsi-script (4.12.4.12) stable; urgency=low

 * repair center batchgui on screen
 * osregex: another empty string regex test
 * license functions: opsiserviceuser if possible
 * linux: shellBatch implemented as shellInAnIcon
 * macos: osfunclin: getmyipbytarget: use path to ip command
 * macos: runningWithGui also working for macos

-- d.oertel <d.oertel@uib.de> Wed, 16 Dec 2020 15:00

opsi-winst/opsi-script (4.12.4.11) stable; urgency=low

 * files: copy: deny-list with '.DS_Store'
 * files: on 'permission denied' call handle.exe if existing in opsi-script directory
 * dosInAnIcon: if win7 and no new Arguments then call runAndCaptureOut

-- d.oertel <d.oertel@uib.de> Mon, 14 Dec 2020 15:00

opsi-winst/opsi-script (4.12.4.10) experimental; urgency=low
